--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
+    "@nowzoo/ngx-highlight-js": "^2.1.15",
+    "@nowzoo/sheetload": "0.0.7",
+    "@types/jquery": "^3.5.1",
+    "angular-file-uploader": "^7.0.1",
+    "angular2-moment": "^1.9.0",
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
