--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "angular2-moment": "^1.9.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "moment": "^2.28.0",
+    "ngx-moment": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
